--- a/scss/_navigation.scss
+++ b/scss/_navigation.scss
@@ -36,7 +36,8 @@
             text-transform: uppercase;
             width: 100%;
 
-            img {
+            svg {
+                height: auto;
                 margin: 0 auto;
                 margin-bottom: 1rem;
                 max-width: 60px;
