--- a/scss/_media-queries.scss
+++ b/scss/_media-queries.scss
@@ -48,7 +48,7 @@
                 padding: 0;
                 width: auto;
 
-                img {
+                svg {
                     width: 35px;
                     margin: 0 .75rem 0 0;
                 }
