--- a/css/color/brown.css
+++ b/css/color/brown.css
@@ -2,7 +2,7 @@ a,
 h1,
 h1::after,
 .btn.btn-primary,
-.navbar.fixed-top #main-menu .nav-item .nav-link.active,
+.navbar.fixed-left .container #main-menu .nav-item .nav-link.active,
 .service .card .card-header,
 .filters-group .btn.active,
 #project-grid .project-item a::after,
@@ -30,25 +30,17 @@ footer {
 .btn:hover,
 .btn.btn-primary:not(:disabled):not(.disabled).active, 
 .btn.btn-primary:not(:disabled):not(.disabled):active,
-.btn.btn-secondary:focus, 
+.btn.btn-primary:focus, 
 .btn.btn-secondary:not(:disabled):not(.disabled).active, 
-.btn.btn-secondary:not(:disabled):not(.disabled):active {
+.btn.btn-secondary:not(:disabled):not(.disabled):active,
+.btn.btn-secondary:focus {
     border-color: #c99789;
 }
 
-.navbar.fixed-top.shrink .navbar-brand svg path {
+.navbar.fixed-left .navbar-brand svg path {
     fill: #c99789;
 }
 
 .preloader .spinner {
     border-top-color: #c99789;
-}
-
-@media screen and (max-width: 991.98px) {
-    .navbar.fixed-top .navbar-brand svg path {
-        fill: #c99789;
-    }
-    .navbar.fixed-top #main-menu {
-        background-color: #c99789;
-    }
 }
