--- a/css/color/purple.css
+++ b/css/color/purple.css
@@ -2,7 +2,7 @@ a,
 h1,
 h1::after,
 .btn.btn-primary,
-.navbar.fixed-top #main-menu .nav-item .nav-link.active,
+.navbar.fixed-left .container #main-menu .nav-item .nav-link.active,
 .service .card .card-header,
 .filters-group .btn.active,
 #project-grid .project-item a::after,
@@ -37,19 +37,10 @@ footer {
     border-color: #8874a3;
 }
 
-.navbar.fixed-top.shrink .navbar-brand svg path {
+.navbar.fixed-left .navbar-brand svg path {
     fill: #8874a3;
 }
 
 .preloader .spinner {
     border-top-color: #8874a3;
-}
-
-@media screen and (max-width: 991.98px) {
-    .navbar.fixed-top .navbar-brand svg path {
-        fill: #8874a3;
-    }
-    .navbar.fixed-top #main-menu {
-        background-color: #8874a3;
-    }
 }
