--- a/css/master.css
+++ b/css/master.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600;700;800;900&family=Ruda:wght@400;500;600;700;800;900&display=swap");
 /*
-Template Name: Metafox – Responsive Bootstrap Personal Template
+Template Name: Metabird – Responsive Bootstrap Personal Template
 Author: Metablox
-Version: 1.1.0
+Version: 1.1.2
 Created: September 2020
 File Description: Main CSS file of the template
 */
